--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -11,9 +11,9 @@
       <%- include('includes/messagens') %>
 
       <% if(contato._id) { %>
-      <form action="/contato/edit/<%= contato._id %>" method="POST">
+      <form class="form-contato"action="/contato/edit/<%= contato._id %>" method="POST">
       <% } else { %>
-      <form action="/contato/register" method="POST">
+      <form class="form-contato" action="/contato/register" method="POST">
       <% } %>
 
 
